# MassaK

./: .gitignore  CMakeLists.txt  MassaK.pro  README.md  build.bat  build.sh  build_cmake.sh  checkcomports.cpp  checkcomports.h  clean.sh  controller.cpp  controller.h  description.doc  driver.cpp  driver.h  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.h  protocol.cpp  protocol.h  run.sh
console/: TestMassaK.pro  main.cpp
debian_upload/: MassaK  libMassaK.so.1
inspection_module/: checkingwidget.cpp  checkingwidget.h  checkingwidget.ui  inspection_module.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_form.ui  messageform.cpp  messageform.h  messageform.ui  run.sh
lib/: CMakeLists.txt  aixlog.hpp  checkcomports.cpp  checkcomports.h  controller.cpp  controller.h  driver.cpp  driver.h  driver_plain.cpp  driver_plain.h  libMassaK.pro  messages.h  protocol.cpp  protocol.h  scales_parameters.h
lib/serial/: iinterface.h  iserial.h  linuxserial.cpp  linuxserial.h  paramsrs.cpp  paramsrs.h  rsinterface.cpp  rsinterface.h  serial_factory.cpp  serial_factory.h  winserial.cpp  winserial.h
